* config/ plugins
* moved Singleton templates from factory.py to interfaces.py
* moved x509 proxy management from CondorBase submit plugin to CondorGrid submit plugin
* added methods isequal( ), sectionisequal( ) and compare( ) to configloader.py
* added external/ directory, with panda client in it
* trying several paths to import panda Client.py
* in APFQueue.__init__() use a self.qcl with only one section (current queue), and in every Batch Submit plugin __init__() get apfqueue.qcl instead of apfqueue.factory.qcl
* default value for queuesDirConf set to None to allow start just from install
* printing a WARNING log message when merging two sections with the same name
* set the default value of "override" to False (the new object has precedence over the current one)
* creating the directory baseLogDir if it does not exist yet (for example, first time APF is installed)
* allowing both queues.conf and queues.d/ at the same time, each one with its own merging mechanism
* for clarity, code for plugins management in a separate module pluginsmgmt.py
* first draft for sched plugin Throttle 
* the config files, logrotate file and sysconfig files are not treated as documentation anymore
* commented out the line reading x509userproxy from ProxyManager in BatchSubmit Exec plugin
* new import path to find Clients.py  in WMSStatus Panda plugin
* bug fixed: usercert and userkey only needed in proxymanager.py when baseproxy is none, not always
* changes in the logrotate config file:
  no prerotate script, post rotate only restart daemon when there is a PID file
* normalized the format of the messages returned by the Sched plugins
* no manpages distribution.

2.4.2

* variable batchqueue not mandatory
* typo fixed in proxymanager.py

2.4.1

* reorganizing the docs/* files, etc/* files,  and the man/* files
* added requirements from voms-clients and myproxy in setup.cfg
* removed the handling of sysconfig files in rpm-post.sh
* mappings.conf created.