@@ -176,3 +176,5 @@ baseLogDirUrl = http://myhost.matrix.net:25880
 logserver.enabled = True
 logserver.index = True
 logserver.allowrobots = False
+
+configplugin = File
